# rust-axum-seaorm

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: category.rs  mod.rs  prelude.rs  product.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250331_090647_add_product_table.rs  m20250401_083816_create_table_product.rs
src/: main.rs
src/controller/: auth_controller.rs  category_controller.rs  files_controller.rs  mod.rs  product_controller.rs  user_controller.rs
src/model/: auth_model.rs  category_model.rs  mod.rs  pagination_model.rs  product_model.rs  user_model.rs
src/utils/: mod.rs  router_gurard.rs  utils.rs
