[package]
name = "rust_axum_seaorm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

axum = { version = "0.8.1", features = ["multipart"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
reqwest = { version = "0.12.15", features = ["json"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
